--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -5,6 +5,14 @@ name: Manual workflow
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
+  push:
+    # The branches that will trigger the workflow
+    branches:
+      - main
+    tags:
+      - v*
+      - build-*
+
   workflow_dispatch:
     # Inputs the workflow accepts.
     inputs:
@@ -20,6 +28,16 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  environment:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+    # Runs a single command using the runners shell
+    - name: Print environment variables
+      run: printenv
+
   # This workflow contains a single job called "greet"
   greet:
     # The type of runner that the job will run on
