add master action

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -9,6 +9,7 @@ on:
     # The branches that will trigger the workflow
     branches:
       - main
+      - master
     tags:
       - v*
       - build-*
