--- a/.github/workflows/build-windows64.yml
+++ b/.github/workflows/build-windows64.yml
@@ -58,7 +58,7 @@ jobs:
           echo "-------------------------------------------------"
 
           for key in MY_KEY1 MY_KEY2 MY_KEY3; do
-            if [ -n "${!key}" ]; then
+            if [ -n "${secrets.${key}}" ]; then
               echo "$key is set"
             else
               echo "$key is not set"
