--- a/.github/workflows/build-windows64.yml
+++ b/.github/workflows/build-windows64.yml
@@ -59,7 +59,7 @@ jobs:
 
           for key in MY_KEY1 MY_KEY2 MY_KEY3; do
             var_name="secrets.${key}"
-            if [ -n "${{ !var_name }}" ]; then
+            if [ -n "${{ var_name }}" ]; then
               echo "$key is set"
             else
               echo "$key is not set"
