--- a/.github/workflows/build-windows64.yml
+++ b/.github/workflows/build-windows64.yml
@@ -57,9 +57,9 @@ jobs:
 
           echo "-------------------------------------------------"
 
-          for key in MY_KEY1 MY_KEY2 MY_KEY3; do
-            var_name="secrets.${key}"
-            if [ -n "${{ var_name }}" ]; then
+          for key in secrets.MY_KEY1 secrets.MY_KEY2 secrets.MY_KEY3; do
+            # var_name="secrets.${key}"
+            if [[ -n "${{ key }}" ]]; then
               echo "$key is set"
             else
               echo "$key is not set"
